# irides

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.secret-detection.yml  .gitlab-ci.yml  .pypirc-template  .version  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.claude/: settings.json
conda-forge.recipe/: meta.yaml
environment/git-env/: commit-msg-hook
environment/publish/: publish-to-irides  publish-to-pypi  publish-to-testpypi  pypi-upload-details.md
environment/python/: environment.yml
src/irides/: __init__.py
src/irides/tools/: analog_to_digital_conversion_tools.py
tests/: __init__.py
tests/design/analog/: common_tooling.py  test_bessel_level.py  test_curvature_designs.py  test_damped_oscillator.py  test_mbox_level.py  test_polyema_composite_slope_specific.py  test_polyema_inline_slope_specific.py  test_polyema_level.py  test_slope_designs.py
tests/design/digital/: test_bessel_jumpvol_level_designs.py  test_d2a_level_designs.py  test_damped_oscillator.py  test_polyema_jumpvol_level_designs.py
tests/filter_signatures/analog/: common_tooling.py  test_bessel_level_specific.py  test_curvature_filters.py  test_damped_oscillator.py  test_level_filters.py  test_mbox_level_specific.py  (+4 more)
tests/resources/: test_discrete_sequence.py  test_pole_resoucres.py  test_transfer_functions.py  test_wireframes.py
tests/tools/: test_analog_to_digital_conversion_tools.py  test_design_tools.py  test_digital_design_tools.py  test_impulse_response_builder_tools.py  test_impulse_response_tools.py  test_transfer_function_tools.py
(+18 files in other folders)
